--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">Release</string>
     <string name="action_settings">Settings</string>
+    <string name="ID">ID</string>
+    <string name="PW">PW</string>
+    <string name="login">Login</string>
 </resources>
